fix overflow of text

--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -116,6 +116,7 @@ $popup-list-toggle-padding: 1px;
     background: none;
     cursor: pointer;
     padding: 0;
+    padding-left: 10px;
     color: $blue;
     text-transform: uppercase;
 
